[package]
name = "rocket_json"
version = "0.1.2"
authors = ["John Peel <john@dgby.org>"]
description = "This crate provides a `Error` struct with json responses in Rocket."
repository = "https://github.com/JohnPeel/rocket_json"
license = "MIT"
keywords = ["rocket", "json"]
categories = ["web-programming"]
edition = "2018"

[badges]
travis-ci = { repository = "JohnPeel/rocket_json", branch = "master" }

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"